[package]
name = "bashmenu_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true       # Enable Link Time Optimization.
codegen-units = 1 # Reduce the number of codegen units to increase optimization opportunities.
